[project]
name = "walkthru-pop-index"
version = "0.1.0"
description = "WorldPop SSP population projections aggregated to H3-indexed GeoParquet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.59",
    "duckdb==1.5.0",
    "h3>=4.4.2",
    "numpy>=2.4.2",
    "pyarrow>=23.0.1",
    "rasterio>=1.5.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = ["ruff>=0.15.4"]
